Code review in AoC16.